--- a/index.html
+++ b/index.html
@@ -5,12 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
+    <script src="jquery-1.12.3.js"></script>
     <title>Document</title>
+    <style>
+        div{
+            position: relative;
+            width: 1200px;
+            height: 1000px;
+            background: #666;
+        }
+        p{
+            position: absolute;
+            left: 100px;
+            top: 100px;
+            width: 50px;
+            height: 50px;
+            background: red;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        <p>
+            P
+        </p>
+    </div>
     <script>
+        $(function(){
+            $('p').click(function(){
+                var num01 = Math.round(Math.random()*1150);
+                var num02 = Math.round(Math.random()*950);
 
+                $('p').animate({left:num01, top:num02},'slow');
+            });
+        });
     </script>
 </body>
 </html>
