--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="jquery-1.12.3.js"></script>
     <title>Document</title>
     <style>
+        *{
+            padding: 0;
+            margin: 0;
+        }
         div{
             position: relative;
             width: 1200px;
